--- a/resources/assets/styles/layouts/_scraps-archive.scss
+++ b/resources/assets/styles/layouts/_scraps-archive.scss
@@ -38,32 +38,46 @@
 }
 
 .scraps-grid--row {
-  display: flex;
-  flex-direction: row;
-  height: 0.65 * $large-screen;
   position: relative;
   margin-left: -$base-spacing;
   margin-right: -$base-spacing;
 
+  @media screen and (min-width: $large-screen) {
+    height: 0.65 * $large-screen;
+    display: flex;
+    flex-direction: row;
+  }
+
   &__wide {
-    height: 0.525 * $large-screen;
+    @media screen and (min-width: $large-screen) {
+      height: 0.525 * $large-screen;
+    }
   }
 }
 
 .scraps-grid--column {
-  display: flex;
-  flex-direction: column;
-  flex: 1 0 100%;
-
   @media screen and (min-width: $large-screen) {
+    display: flex;
+    flex-direction: column;
     flex: 1 0 50%;
   }
 }
 
 .scraps--item {
-  flex: 1 1 50%;
+  height: calc(100vh - #{1.5 * $base-spacing});
+
+  .has-two-children & {
+    height: 100vw;
+  }
+
   position: relative;
   overflow: hidden;
+  display: block;
+
+  @media screen and (min-width: $large-screen) {
+    height: auto !important;
+    flex: 1 1 50%;
+  }
 
   @extend %fade-into-view;
 
